--- a/docker/build
+++ b/docker/build
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-docker build -t session_4_new:latest -f docker/Dockerfile .
+docker build -t session_4_demo:latest -f docker/Dockerfile .
